Docker (#37)
* add docker

* application starts with docker-compose

* set vm ram to 384m

* Feign (#14)

* add example feign client nasa API

* set example header Authorization

* add log example

* GitHub base implementation (#17)

* add github controller

* remove nasa example

* Git hub pulls (#20)

* add create pull request

* introduce spring context tests

* add RepoEntity - Users own a Collection of Repos (#21)

* add RepoEntity - Users own a Collection of Repos

* add set for UserEntity - if a remote repo has been deleted, the internal state of UserEntity.repos has to be synchronized (data in the database have to be removed)

* add repo test for UserEntity

* Security (#28)

* Configure http basic auth

* Configure UserDetailsService

* Refactor to spring User

* Configure password encoder

* Add login endpoint

* Add JwtAuthFilter

* Narrow exception type to JwtException

* Fix UserEntity tests

* Add test for get successful login

* Add test for un-successful login

* wip

* Refactor

* Add jwt filter tests

* Add assertion for user role (#29)

* Add create user endpoint (#31)

* Add reset password endpoint (#32)

* Add reset password route for admin (#33)

* Add delete user endpoint (#34)

* add RestExceptionHandler (#36)

* add RestExceptionHandler

* add RestExceptionHandler for AuthController

* fix JwtAuthFilterTest

* fix exception

* fix quotes

* add ignore params AuthenticationPrincipal from swagger

* add Hello URL static extract

* add ACCESS_TOKEN_URL static extract

* reuse static url's and allow GET to hello path

* security log to info

* fix user create from repo

* reformat only

* change doc

* loglevel info

Co-authored-by: Jan Robert <48794499+jamarob@users.noreply.github.com>